--- a/frontend/src/Components/Header/Header.css
+++ b/frontend/src/Components/Header/Header.css
@@ -26,7 +26,7 @@
     width: 100%;
     height: 4rem;
     display: grid;
-    grid-template-columns: 5rem 0.7fr 1.3fr 2fr 5rem;
+    grid-template-columns: 5rem 1fr  0.7fr 2.3fr 5rem;
     background-color: var(--ac_black);
 
 }
@@ -51,7 +51,7 @@
     color: var(--accent);
 }
 
-.header-search {
+/* .header-search {
     grid-column: 3/4;
     height: 2rem;
     margin: 15px 0px 0px 2.5rem;
@@ -95,11 +95,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    /* height: 2rem; */
     border: none;
     outline: none;
     margin-right: 2px;
-}
+} */
 
 .search-btn {
     display: flex;
@@ -112,15 +111,17 @@
 
 .header-icons {
     display: grid;
+    grid-column: 4/5;
     grid-template-columns: 1fr repeat(5, 1fr);
     justify-content: center;
     align-items: center;
 }
 
-.header-icons a:first-child {
-    grid-column: 2/3;
+.header-icons button{
+    outline: none;
+    background: none;
+    border: none;
 }
-
 .header-icons a {
     color: var(--ac_white);
     display: grid;
