--- a/frontend/src/Components/Post/Post.css
+++ b/frontend/src/Components/Post/Post.css
@@ -12,8 +12,97 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    /* border: 1px dashed red; */
+    border: 1px dashed red;
     font-family: 'Montserrat', sans-serif;
 }
 
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Oswald:wght@200;300;400;500;600;700&display=swap");
+
+.post-container{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 8px;
+    flex-direction: column;
+    width: min(100%, 40rem);
+    height: auto;
+    border: 1px solid var(--ac_black);
+    border-radius: 8px;
+    box-sizing: border-box;
+    background-color: var(--ac_light);
+}
+.user-detail-edit-option{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0px 10px;
+    height: 4rem;
+}
+.edit-option{
+    display: flex;
+    align-items: center;
+}
+.edit-option button{
+    background: none;
+    border: none;
+    outline: none;
+    cursor: pointer;
+}
+.post-caption{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 2px 0px 2px 9px;
+    height: 2rem;
+}
+.post-image{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+  width: 100%;
+    padding: 5px 5px;
+    box-sizing: border-box;
+}
+.post-image img{
+    display: flex;
+    justify-content: center;
+    height: 100%;
+    width: 100%;
+    object-fit: contain;
+    border-radius: 10px;
+}
+.like-comment{
+    display: flex;
+    justify-content: space-between;
+    padding: 5px 8px;
+    height: 2.4rem;
+    align-items: center;
+}
+.like-btn{
+    display: flex;
+    background: none;
+    border: none;
+    outline: none;
+}
+
+.like-comment-delete{
+    display: flex;
+    height: 2.4rem;
+    align-items: center;
+    justify-content: space-between;
+    padding: 5px 8px;
+}
+.like-comment-button{
+    display: flex;
+    justify-content: space-between;
+    width: 30%;
+    height: 2.4rem;
+    align-items: center;
+}
+.like-comment-button button{
+    display: flex;
+    border: none;
+    background: none;
+    outline: none;
+}
