--- a/frontend/src/Components/comment/CommentCard.css
+++ b/frontend/src/Components/comment/CommentCard.css
@@ -1,56 +1,59 @@
 :root {
-    --accent: #aadee8;
-    --ac_dark: #4798a3;
-    --ac_black: #06272b;
-    --ac_light: #d3edf1;
-    --ac_white: #fff;
+  --accent: #aadee8;
+  --ac_dark: #4798a3;
+  --ac_black: #06272b;
+  --ac_light: #d3edf1;
+  --ac_white: #fff;
 }
 
 *,
 *::after,
 *::before {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    border: 1px dashed red;
-    font-family: 'Montserrat', sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  /* border: 1px dashed red; */
+  font-family: "Montserrat", sans-serif;
 }
 
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Oswald:wght@200;300;400;500;600;700&display=swap");
 
-.user-comment-box{
-display: flex;
-flex-direction: column;
-margin: 5px 0px;
+.user-comment-box {
+  display: flex;
+  flex-direction: column;
+  margin: 5px 0px;
+  background-color: var(--ac_light);
+  border-radius: 8px;
 }
-.user-comment-box a{
-    display: flex;
-    text-decoration: none;
-    padding: 5px 5px;
-    margin: 5px 0px;
-    height: 2.5rem;
-   
+.user-comment-box a {
+  display: flex;
+  text-decoration: none;
+  padding: 5px 5px;
+  margin: 5px 0px;
+  height: 2.5rem;
 }
-.commentcard-name{
-    display: flex;
-    padding: 0px 0px 0px 5px;
-    align-items: flex-start;
-    color: var(--ac_black);
+.commentcard-name {
+  display: flex;
+  padding: 0px 0px 0px 5px;
+  align-items: flex-start;
+  color: var(--ac_black);
+  font-weight: 600;
+  font-size: 15px;
 }
-.comment-of-user{
-    display: flex;
-    justify-content: space-evenly;
-    padding: 2px 0px;
-    margin-top: 0px;
-    font-weight: 500;
-    /* align-items: center; */
+.comment-of-user {
+  display: flex;
+  justify-content: space-evenly;
+  padding: 2px 0px;
+  margin-top: 0px;
+  font-weight: 500;
+  /* align-items: center; */
 }
-.edit-reply-delete-comment button{
-    outline: none;
-    background: none;
-    cursor: pointer;
-    opacity: 0.4;
+.edit-reply-delete-comment button {
+  outline: none;
+  background: none;
+  cursor: pointer;
+  opacity: 0.4;
 }
-.edit-reply-delete-comment button:hover{
-    opacity: 1;
+.edit-reply-delete-comment button:hover {
+  opacity: 1;
 }
