--- a/frontend/src/Components/Header/Header.css
+++ b/frontend/src/Components/Header/Header.css
@@ -37,9 +37,9 @@
   grid-column: 2/3;
   padding: 5px 5px;
 }
-.header-logo-text a{
-    text-decoration: none;
-    color: var(--accent);
+.header-logo-text a {
+  text-decoration: none;
+  color: var(--accent);
 }
 .header-logo span {
   font-size: 35px;
@@ -65,7 +65,7 @@
   display: grid;
   grid-column: 4/5;
   grid-template-columns: 1fr repeat(5, 1fr);
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
 }
 
@@ -80,7 +80,18 @@
   justify-content: center;
   align-items: center;
 }
-
+.header-icons a:nth-child(1) {
+  grid-column: 3/4;
+}
+.header-icons a:nth-child(2) {
+  grid-column: 4/5;
+}
+.header-icons a:nth-child(3) {
+  grid-column: 5/6;
+}
+.header-icons a:nth-child(4) {
+  grid-column: 6/7;
+}
 .hamburger-icon {
   display: none;
 }
