--- a/frontend/src/Components/UpdateProfile/UpdateProfile.css
+++ b/frontend/src/Components/UpdateProfile/UpdateProfile.css
@@ -52,8 +52,13 @@
   justify-content: center;
   margin: 5px 0px;
 }
+.update-profile-avatar-box{
+  display: flex;
+  justify-content: center;
+}
 .update-profile-form input {
   outline: none;
+  border-radius: 7px;
   height: 2rem;
   margin: 5px 0px;
   padding: 0px 5px;
@@ -83,4 +88,5 @@
   margin: 5px 0px;
   position: relative;
   left: 30%;
+  cursor: pointer;
 }
