--- a/frontend/src/Components/Post/Post.css
+++ b/frontend/src/Components/Post/Post.css
@@ -24,6 +24,7 @@
   margin-bottom: 8px;
   flex-direction: column;
   width: min(100%, 40rem);
+  height: 35rem;
   height: auto;
   border: 1px solid var(--ac_black);
   border-radius: 8px;
@@ -59,7 +60,7 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  height: 100%;
+  height: 22rem;
   width: 100%;
   padding: 5px 5px;
   box-sizing: border-box;
