--- a/frontend/src/Components/UserAccount/userAccount.css
+++ b/frontend/src/Components/UserAccount/userAccount.css
@@ -172,6 +172,7 @@
   display: flex;
   justify-content: center;
   margin-bottom: 5px;
+  cursor: pointer;
 }
 .user-follow-data {
   display: flex;
