--- a/frontend/src/Components/Post/Post.css
+++ b/frontend/src/Components/Post/Post.css
@@ -187,7 +187,7 @@
   font-size: 20px;
   font-weight: 500;
 }
-.update-cation-btn {
+.update-caption-btn {
   background-color: var(--ac_black);
   color: var(--ac_light);
   font-weight: 500;
