--- a/frontend/src/Components/SignUp/SignUp.css
+++ b/frontend/src/Components/SignUp/SignUp.css
@@ -1,127 +1,95 @@
-:root {
-  --accent: #aadee8;
-  --ac_dark: #4798a3;
-  --ac_black: #06272b;
-  --ac_light: #d3edf1;
-  --ac_white: #fff;
+.sign_up-conatiner{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  width: 800px;
+  height: 550px;
+  border-radius: 10px;
+  background: rgba(255, 255, 255, 0.1);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
 }
-
-*,
-*::after,
-*::before {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  /* border: 1px dashed red; */
-  font-family: "Montserrat", sans-serif;
-}
-
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Oswald:wght@200;300;400;500;600;700&display=swap");
-
-.sign-up-page {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  width: 100%;
-}
-.Signup-user {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  width: min(100%, 30rem);
-  height: 27rem;
-  align-items: center;
-  border: 1px solid var(--ac_black);
-  border-radius: 7px;
-  background-color: var(--ac_light);
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-}
-.Signup-user:hover {
-  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-}
-.Signup-user form {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-}
-.signup-form {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  padding: 5px 15px;
-}
-.sign-up {
-  display: flex;
-  font-size: 30px;
-  font-weight: 600;
-  justify-content: center;
-  margin: 5px 0px;
-  padding: 5px 0px;
-  color: var(--ac_dark);
-}
-.sign-up-avatar {
-  display: flex;
-  justify-content: center;
-  height: 5rem;
-}
-.signup-form input {
-  display: flex;
-  justify-content: center;
-  width: 100%;
-  padding: 5px 5px;
-  height: 2rem;
-  margin: 5px 0px;
-  outline: none;
+.sign-up-text{
   font-weight: 500;
+  margin-top: 20px;
+  color: white;
+  font-size: 1.5rem;
 }
-.sign-up-input-field {
-  border-radius: 7px;
-}
-.sign-up-btn-div {
+.sign-up-avatar{
   display: flex;
   justify-content: center;
+  margin: 10px 0px ;
+}
+.signup-form{
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+}
+.signup_input-box{
+  display: flex;
+  justify-content: space-between;
   align-items: center;
-}
-.signup-form button {
-  display: flex;
-  justify-content: center;
   height: 2rem;
-  width: 5rem;
-  outline: none;
-  font-weight: 500;
-  font-size: 15px;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-}
-.sign-up-btn {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: var(--ac_black);
-  color: var(--ac_light);
-  outline: none;
+  width: 100%;
+  margin: 5px 0px;
+  border: 1px solid white;
   border-radius: 5px;
-  cursor: pointer;
-  font-weight: 500;
-  margin-bottom: 5px;
 }
-.signup-form button:hover {
-  background-color: var(--ac_light);
-  color: var(--ac_black);
-  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+.custom-file-input::-webkit-file-upload-button {
+  visibility: hidden;
 }
-.signup-form a {
+.custom-file-input::before {
+  content: 'Select image';
   display: flex;
-  text-decoration: none;
-  height: 2rem;
-  align-items: center;
-  justify-content: flex-end;
-  color: var(--ac_black);
+  justify-content: center;
+  width: 8rem;
+  background: white;
+  border: 1px solid #999;
+  border-radius: 10px;
+  padding: 5px 8px;
+  outline: none;
+  white-space: wrap;
+  -webkit-user-select: none;
+  cursor: pointer;
+  text-shadow: 1px 1px #fff;
   font-weight: 500;
-  opacity: 0.6;
+  font-size: 10pt;
 }
-.signup-form a:hover {
-  opacity: 1;
+.custom-file-input:hover::before {
+  border-color: black;
+}
+.custom-file-input:active::before {
+  background: -webkit-linear-gradient(top, #e3e3e3, #f9f9f9);
+}
+.sign-up-input-field{
+  display: flex;
+  width: 100%;
+  background: none;
+  border: none;
+  outline: none;
+  color: white;
+}
+.sign-up-input-field::placeholder{
+  color: white;
+  font-weight: 500;
+}
+.signup-page{
+  grid-column: 2/3;
+  width: calc(800px - 450px);
+  border-left: 1px solid var(--ac_white);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+.signup_button{
+  padding: 10px 30px;
+  width: 130px;
+}
+.sign-up-register{
+  text-decoration: none;
+  font-weight: 500;
+  color: white;
+  margin-top: 5px;
 }
