--- a/frontend/src/Components/Post/Post.css
+++ b/frontend/src/Components/Post/Post.css
@@ -21,181 +21,61 @@
 .post-container {
   display: flex;
   justify-content: center;
-  margin-bottom: 8px;
   flex-direction: column;
-  width: min(100%, 40rem);
-  height: 35rem;
-  height: auto;
-  border: 1px solid var(--ac_black);
-  border-radius: 8px;
-  box-sizing: border-box;
-  background-color: var(--ac_light);
+  height: 500px;
+  width: 500px;
+  background: rgba(255, 255, 255, 0.1);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  margin-top: 5px;
+  border-radius: 5px;
+  padding: 10px 10px;
 }
 .user-detail-edit-option {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0px 10px;
-  height: 4rem;
+  height: 3rem;
 }
-.edit-option {
+.user-detail {
   display: flex;
   align-items: center;
+  height: 100%;
 }
 .edit-option button {
-  background: none;
   border: none;
   outline: none;
-  cursor: pointer;
-  font-weight: 500;
-}
-.post-caption {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  padding: 2px 0px 2px 9px;
-  height: 2rem;
+  background: none;
 }
 .post-image {
+  height: 400px;
+  width: 480px;
   display: flex;
-  flex-wrap: wrap;
   justify-content: center;
-  align-items: center;
-  height: 22rem;
-  width: 100%;
-  padding: 5px 5px;
-  box-sizing: border-box;
+  padding: 5px 0;
 }
 .post-image img {
-  display: flex;
-  justify-content: center;
   height: 100%;
   width: 100%;
-  object-fit: contain;
-  border-radius: 10px;
 }
 .like-comment {
   display: flex;
-  justify-content: space-between;
-  padding: 5px 8px;
-  height: 2.4rem;
-  align-items: center;
 }
-.like-btn {
-  display: flex;
-  background: none;
+.like-comment button {
   border: none;
   outline: none;
-  cursor: pointer;
+  background: none;
 }
-
 .like-comment-delete {
   display: flex;
-  height: 2.4rem;
-  align-items: center;
   justify-content: space-between;
-  padding: 5px 8px;
-}
-.like-comment-button {
-  display: flex;
-  justify-content: space-between;
-  width: 30%;
-  height: 2.4rem;
   align-items: center;
 }
-
-.like-comment-button button {
-  display: flex;
-  border: none;
-  background: none;
-  outline: none;
-  cursor: pointer;
-}
-.like-comment-delete button{
+.like-comment-delete button {
   cursor: pointer;
   background: none;
   border: none;
   outline: none;
-}
-.delete-option{
-  opacity: 0.5;
-}
-.delete-option:hover{
-  opacity: 1;
-}
-/* dialog box edit */
-.dialog-box {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  width: 15rem;
-  height: auto;
-  overflow: auto;
-}
-.like-user {
-  display: flex;
-  justify-content: flex-start;
-  height: 4rem;
-  background-color: var(--ac_light);
-  padding: 5px 5px;
-  margin: 5px 5px;
-  border-radius: 7px;
-}
-.comment-box {
-  display: flex;
-  justify-content: space-between;
-  padding: 2px 5px;
-  height: 2rem;
-  align-items: center;
-  margin: 5px 0px;
-}
-.comment-box input {
-  height: 2rem;
-  display: flex;
-  align-items: center;
-  outline: none;
-}
-.comment-box button {
-  display: flex;
-  align-items: center;
-  height: 2rem;
-  justify-content: center;
-  outline: none;
-}
-.post-comment-card{
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  margin: 5px 5px;
-}
-.add-comment-input {
-  border: 1px solid var(--ac_black);
-  border-radius: 5px;
-  padding: 0px 0px 0px 5px;
-  font-weight: 500;
-}
-.add-comment-btn {
-  background-color: var(--ac_black);
-  color: var(--ac_light);
-  font-weight: 500;
-  border-radius: 5px;
-  cursor: pointer;
-  width: 2.5rem;
-}
-.no-comments-txt {
-  display: flex;
-  justify-content: center;
-  font-size: 20px;
-  font-weight: 500;
-}
-.update-caption-btn {
-  background-color: var(--ac_black);
-  color: var(--ac_light);
-  font-weight: 500;
-  border-radius: 5px;
-  cursor: pointer;
-  padding: 2px 2px;
-}
-.FavoriteBorder{
-  color: red;
 }
