--- a/frontend/src/Components/UserAccount/userAccount.css
+++ b/frontend/src/Components/UserAccount/userAccount.css
@@ -29,8 +29,12 @@
 }
 
 .user-post-section {
-  overflow-y: auto;
   background-color: var(--accent);
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
   grid-column: 2/3;
   box-sizing: border-box;
   padding: 2vmax;
