--- a/frontend/src/Components/Home/HomePage.css
+++ b/frontend/src/Components/Home/HomePage.css
@@ -28,11 +28,11 @@
   height: 100vh;
 }
 .home-post-area {
-  overflow-y: auto;
-  background-color: var(--accent);
+  /* background-color: var(--accent); */
   grid-column: 2/3;
-  box-sizing: border-box;
   padding: 2vmax;
+  width: 100%;
+  height: 100%;
 }
 .home-friends-area {
   grid-column: 3/4;
