--- a/frontend/src/Components/UserProfile/UserProfile.css
+++ b/frontend/src/Components/UserProfile/UserProfile.css
@@ -16,7 +16,6 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  /* border: 1px dashed red; */
   font-family: "Montserrat", sans-serif;
 }
 
@@ -47,17 +46,9 @@
 .user-post {
   display: flex;
   align-items: center;
-  justify-content: space-around;
-  margin: 5px 12px;
-}
-.user-post .post-text {
-  height: 1.5rem;
-  width: 4rem;
-  background-color: var(--ac_white);
-  border-radius: 5px;
-  align-items: center;
   justify-content: center;
-  padding: 2px 0px 2px 10px;
+  /* justify-content: space-around; */
+  /* margin: 5px 12px; */
 }
 .no-post-text {
   display: flex;
@@ -92,4 +83,8 @@
   background-color: var(--ac_light);
   color: var(--ac_black);
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+}
+.user-profile-bio{
+  display: flex;
+  justify-content: center;
 }
